# oxxy

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust-ci.yml
src/: lib.rs  shapes.rs
src/ioxxy/: ctl.rs  main.rs
src/loxxy/: main.rs
src/moxxy/: main.rs
src/roxxy/: main.rs
src/toxxy/: main.rs
